# maximum-virtual-product

./: .gitignore  .mcp.json  CLAUDE.md  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/agents/: base.py  research_agent.py
backend/app/db/: supabase.py
backend/app/models/: schema.py
backend/app/routers/: artifacts.py  auth.py  export.py  feedback.py  plan.py  plan_directions.py  projects.py  research.py  video.py
backend/app/services/: claude_service.py  dag_utils.py  export_service.py  image_service.py  plan_service.py  research_service.py  video_service.py  web_fetch.py  web_search.py
backend/app/ws/: handlers.py  manager.py
backend/migrations/: 001_initial.sql  002_add_image_url.sql  003_add_plan_directions.sql  004_add_spatial_bounds.sql  005_add_user_id.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  export.ts  plan.ts  research.ts  video.ts  websocket.ts
frontend/src/hooks/: useCanvas.ts  useProject.ts  useWebSocket.ts
mcp-server/: pyproject.toml  server.py
video/: package-lock.json  package.json
video/src/: ArtifactSlide.tsx  MermaidDiagram.tsx  ResearchVideo.tsx  TransitionEffects.tsx  index.ts
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: auth.ts  extension.ts  types.ts
vscode-extension/webview/: index.html  package-lock.json  package.json  vite.config.ts
(+62 files in other folders)
